force-app/main/default/objects/Candidate__c/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <description>Reason for contract termination.</description>
    <inlineHelpText>Select the reason for termination.</inlineHelpText>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Did not meet initial contract requirements</fullName>
            </value>
            <value>
                <fullName>Did not meet extended contract requirements</fullName>
            </value>
            <value>
                <fullName>Voluntary resignation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>