force-app/main/default/objects/Candidate__c/fields/Total_FYC__c.field-meta.xml
<CustomField>
    <fullName>Total_FYC__c</fullName>
    <description>Total First Year Commission from all Opportunities linked to this candidate&apos;s Contact. Updated via Flow.</description>
    <inlineHelpText>Total FYC from submitted opportunities. Contract B requirement: $2,500</inlineHelpText>
    <label>Total FYC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>