force-app/main/default/objects/Candidate__c/fields/Transition_to_A_Date__c.field-meta.xml
<CustomField>
    <fullName>Transition_to_A_Date__c</fullName>
    <description>Date when Contract B agent successfully transitioned to Contract A.</description>
    <inlineHelpText>The date when this Contract B agent successfully met requirements and transitioned to Contract A.</inlineHelpText>
    <label>Transition to A Date</label>
    <type>Date</type>
</CustomField>