force-app/main/default/objects/Candidate__c/fields/Variable_License__c.field-meta.xml
<CustomField>
    <fullName>Variable_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Variable License</label>
    <type>Checkbox</type>
</CustomField>