force-app/main/default/objects/Candidate__c/fields/Work_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Work_Email_Address__c</fullName>
    <label>Work Email Address</label>
    <type>Email</type>
</CustomField>