force-app/main/default/objects/Candidate__c/fields/Years_of_College_Completed__c.field-meta.xml
<CustomField>
    <fullName>Years_of_College_Completed__c</fullName>
    <label>Years of College Completed</label>
    <length>2</length>
    <type>Text</type>
</CustomField>