force-app/main/default/objects/Candidate__c/recordTypes/Master_Candidate_Record.recordType-meta.xml
<RecordType>
    <fullName>Master_Candidate_Record</fullName>
    <active>true</active>
    <label>Master Candidate Record</label>
</RecordType>