force-app/main/default/objects/Candidate__c/listViews/Candidates_In_Contracting.listView-meta.xml
<ListView>
    <fullName>Candidates_In_Contracting</fullName>
    <columns>NAME</columns>
    <columns>Agency__c</columns>
    <columns>Next_Step__c</columns>
    <columns>Sales_Manager__c</columns>
    <columns>ALC__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Next_Step_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ALC__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Candidate__c.Master_Candidate_Record</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active/In Process</value>
    </filters>
    <label>Candidates In Contracting</label>
</ListView>