force-app/main/default/objects/Candidate__c/listViews/Career_B_Candidates.listView-meta.xml
<ListView>
    <fullName>Career_B_Candidates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>Contracted- Contract B</value>
    </filters>
    <label>Career B Candidates MASTER</label>
</ListView>