force-app/main/default/objects/Candidate__c/listViews/Copy_of_BROOKES_ACTIVE_candidate_MASTER.listView-meta.xml
<ListView>
    <fullName>Copy_of_BROOKES_ACTIVE_candidate_MASTER</fullName>
    <columns>NAME</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>Notes__c</columns>
    <columns>Website__c</columns>
    <columns>Gender__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Keep In Touch</value>
    </filters>
    <filters>
        <field>Candidate_Sourced_By__c</field>
        <operation>contains</operation>
        <value>Brooke Ianni</value>
    </filters>
    <label>BROOKES KIT candidate MASTER</label>
</ListView>