force-app/main/default/objects/Candidate__c/listViews/Copy_of_Los_Angeles_ACTIVE.listView-meta.xml
<ListView>
    <fullName>Copy_of_Los_Angeles_ACTIVE</fullName>
    <columns>NAME</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>Notes__c</columns>
    <columns>Website__c</columns>
    <columns>Gender__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>Keep In Touch</value>
    </filters>
    <filters>
        <field>Sales_Manager_Unit__c</field>
        <operation>contains</operation>
        <value>Tim Denton,Jonathan Gruber</value>
    </filters>
    <filters>
        <field>Office_Location__c</field>
        <operation>contains</operation>
        <value>LA,Los Angeles</value>
    </filters>
    <label>Los Angeles KIT candidates MASTER</label>
</ListView>