force-app/main/default/objects/Candidate__c/listViews/Copy_of_Newport_ACTIVE_candidate_MASTER.listView-meta.xml
<ListView>
    <fullName>Copy_of_Newport_ACTIVE_candidate_MASTER</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>Notes__c</columns>
    <columns>Website__c</columns>
    <columns>Gender__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active/In Process</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Brooke</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Ianni</value>
    </filters>
    <label>BROOKES ACTIVE candidate MASTER</label>
</ListView>