force-app/main/default/objects/Candidate__c/listViews/Copy_of_Newport_KIT_MASTER.listView-meta.xml
<ListView>
    <fullName>Copy_of_Newport_KIT_MASTER</fullName>
    <columns>NAME</columns>
    <columns>Next_Meeting_Date__c</columns>
    <columns>Notes__c</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>Website__c</columns>
    <columns>Gender__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>Active/In Process</value>
    </filters>
    <filters>
        <field>Sales_Manager__c</field>
        <operation>contains</operation>
        <value>Tim Denton</value>
    </filters>
    <filters>
        <field>Office_Location_Picklist__c</field>
        <operation>equals</operation>
        <value>Newport Beach</value>
    </filters>
    <label>Newport  ACTIVE candidate MASTER</label>
</ListView>