force-app/main/default/objects/Candidate__c/listViews/Female_Active_Candidates_MASTER.listView-meta.xml
<ListView>
    <fullName>Female_Active_Candidates_MASTER</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Next_Step__c</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>Website__c</columns>
    <columns>Attraction_Interview_Date_Completed__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active/In Process</value>
    </filters>
    <filters>
        <field>Sales_Manager__c</field>
        <operation>contains</operation>
        <value>Brad Sofonia,Tim Denton,Son Le,Elizabeth Kagele,Van Hess,Michael Yang,Scott Primm</value>
    </filters>
    <filters>
        <field>Office_Location_Picklist__c</field>
        <operation>contains</operation>
        <value>Utah,Bakersfield,Las Vegas,Los Angeles,Newport Beach,Roseville,KoreaTown</value>
    </filters>
    <filters>
        <field>Gender__c</field>
        <operation>equals</operation>
        <value>Female</value>
    </filters>
    <label>FEMALE Active Candidates MASTER</label>
</ListView>