force-app/main/default/objects/Candidate__c/listViews/Newport_KIT.listView-meta.xml
<ListView>
    <fullName>Newport_KIT</fullName>
    <columns>NAME</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>Notes__c</columns>
    <columns>Website__c</columns>
    <columns>Gender__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Keep In Touch</value>
    </filters>
    <filters>
        <field>Office_Location__c</field>
        <operation>equals</operation>
        <value>Newport Beach</value>
    </filters>
    <label>Newport KIT candidate MASTER</label>
</ListView>