force-app/main/default/objects/Candidate__c/listViews/SOFONIA_UTAH_Active_Candidates_MASTER.listView-meta.xml
<ListView>
    <fullName>SOFONIA_UTAH_Active_Candidates_MASTER</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Next_Step__c</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>Website__c</columns>
    <columns>Attraction_Interview_Date_Completed__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Manager__c</field>
        <operation>contains</operation>
        <value>Bradley Sofonia</value>
    </filters>
    <filters>
        <field>Office_Location_Picklist__c</field>
        <operation>contains</operation>
        <value>Utah</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Keep In Touch</value>
    </filters>
    <label>SOFONIA_UTAH KIT Candidates MASTER</label>
</ListView>